fix columns align on tables with scroll

--- a/frontend/src/app/components/shared/data-table/data-table.less
+++ b/frontend/src/app/components/shared/data-table/data-table.less
@@ -101,4 +101,8 @@ data-table {
         overflow-x: hidden;
         line-height: 1.5;
     }
+
+    .shrinked {
+        padding-right: 6px;
+    }
 }
